Fix overflow issue

--- a/style.css
+++ b/style.css
@@ -21,17 +21,19 @@ body {
     display: flex;
     text-align: center;
     flex-direction: column;
-    height: 100vh;
     margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    max-width: 100vw;
     background-color: var(--dark-green);
     color: var(--light-text);
-    overflow: hidden;
 }
 
 header {
     flex: 0 0 auto;
     padding: 15px 0;
     background-color: var(--dark-trans);
+    margin: 0;
 }
 
 header h1 {
@@ -48,6 +50,7 @@ main {
     justify-content: center;
     align-items: center;
     padding: 0;
+    margin: 0;
 }
 
 .calculator {
@@ -117,7 +120,7 @@ button:active, .active {
     visibility: hidden;
     position: absolute;
     bottom: 115%;
-    right: -15%;
+    left: 0%;
     z-index: 1;
 
     width: 120px;
@@ -180,4 +183,5 @@ footer a {
 footer a:hover, footer a:focus {
     color: rgb(170, 255, 0);
     text-decoration: none;
+    margin: 0;
 }
